Quick hack to show test Rapid Connect in the test dashboard

--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@ this.href = this.href.replace(/^https:\/\/groups\.aaf/, "https://groups.test.aaf
 this.href = this.href.replace(/^https:\/\/manager\.aaf/, "https://manager.test.aaf");
 this.href = this.href.replace(/^https:\/\/status\.aaf/, "https://status.test.aaf");
 this.href = this.href.replace(/^https:\/\/vho\.aaf/, "https://vho.test.aaf");
+this.href = this.href.replace(/^https:\/\/rapid\.aaf/, "https://rapid.test.aaf");
 });
 }
 });
