Remove AAF Groups from index

--- a/index.html
+++ b/index.html
@@ -106,11 +106,10 @@ Federation Status monitors the availability of Identity Providers and Service Pr
 
 <span class="dropt">
 <span style="width:500px;">
-AAF Groups allows experts to centrally manage group membership to provide access to resources across multiple services.
+AAF Assurance records user identities who have been assured for a higher level of identity assurance, as some Service Providers require additional validation in order to access their service.
 </span>
-<a href="https://groups.aaf.edu.au/">
-<img class="aaf-icon" src="img/Groups_small.gif">
-</a> 
+<a href="https://assurance.aaf.edu.au/">
+<img class="aaf-icon" src="img/Assurance_small.gif"></a> 
 </span>
 
 </div>
@@ -118,14 +117,6 @@ AAF Groups allows experts to centrally manage group membership to provide access
 <br>
 
 <div class="aaf-icon-group">
-
-<span class="dropt">
-<span style="width:500px;">
-AAF Assurance records user identities who have been assured for a higher level of identity assurance, as some Service Providers require additional validation in order to access their service.
-</span>
-<a href="https://assurance.aaf.edu.au/">
-<img class="aaf-icon" src="img/Assurance_small.gif"></a> 
-</span>
 
 <span class="dropt">
 <span style="width:500px;">
@@ -141,6 +132,7 @@ The AAF Virtual Home allows AAF-subscribed organisations to create user accounts
 <a href="https://vho.aaf.edu.au/"><img class="aaf-icon" src="img/Virtual-Home_small.gif"></a> 
 </span>
 
+<img class="aaf-icon" src=img/transparent_small.gif>
 <img class="aaf-icon" src=img/transparent_small.gif>
 <img class="aaf-icon" src=img/transparent_small.gif>
 
