Remove reference to ASC
Closes #3.

--- a/index.html
+++ b/index.html
@@ -61,10 +61,6 @@ span.dropt:hover span {margin: 20px 0 0 170px; background: #ffffff; z-index:6;}
 <div class="aaf-icon-group">
 
 <span class="dropt">
-<a href="https://github.com/ausaccessfed/aasc"><img class="aaf-icon" src="img/AASC_small.gif"></a>
-</span>
-
-<span class="dropt">
 <a href="https://manager.aaf.edu.au/attributevalidator/"><img class="aaf-icon" alt="Attribute Validator" src="img/Attribute-Validator_small.gif"></a>
 </span>
 
@@ -81,6 +77,10 @@ span.dropt:hover span {margin: 20px 0 0 170px; background: #ffffff; z-index:6;}
 <img class="aaf-icon" alt="Assurance" src="img/Assurance_small.gif"></a>
 </span>
 
+<span class="dropt">
+<a href="https://rapid.aaf.edu.au/"><img class="aaf-icon" alt="Rapid Connect" src="img/Rapid-Connect_small.gif"></a>
+</span>
+
 </div>
 
 <br>
@@ -88,13 +88,10 @@ span.dropt:hover span {margin: 20px 0 0 170px; background: #ffffff; z-index:6;}
 <div class="aaf-icon-group">
 
 <span class="dropt">
-<a href="https://rapid.aaf.edu.au/"><img class="aaf-icon" alt="Rapid Connect" src="img/Rapid-Connect_small.gif"></a>
-</span>
-
-<span class="dropt">
 <a href="https://vho.aaf.edu.au/"><img class="aaf-icon" alt="Virtual Home" src="img/Virtual-Home_small.gif"></a>
 </span>
 
+<img class="aaf-icon" src=img/transparent_small.gif>
 <img class="aaf-icon" src=img/transparent_small.gif>
 <img class="aaf-icon" src=img/transparent_small.gif>
 <img class="aaf-icon" src=img/transparent_small.gif>
