Reference new IdE service
Closes #4.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,10 @@ span.dropt:hover span {margin: 20px 0 0 170px; background: #ffffff; z-index:6;}
 <a href="https://vho.aaf.edu.au/"><img class="aaf-icon" alt="Virtual Home" src="img/Virtual-Home_small.gif"></a>
 </span>
 
-<img class="aaf-icon" src=img/transparent_small.gif>
+<span class="dropt">
+<a href="https://ide.aaf.edu.au/"><img class="aaf-icon" alt="Identity Enhancement Service" src="img/IdE_icon.png"></a>
+</span>
+
 <img class="aaf-icon" src=img/transparent_small.gif>
 <img class="aaf-icon" src=img/transparent_small.gif>
 <img class="aaf-icon" src=img/transparent_small.gif>
@@ -193,6 +196,7 @@ this.href = this.href.replace(/^https:\/\/manager\.aaf/, "https://manager.test.a
 this.href = this.href.replace(/^https:\/\/status\.aaf/, "https://status.test.aaf");
 this.href = this.href.replace(/^https:\/\/vho\.aaf/, "https://vho.test.aaf");
 this.href = this.href.replace(/^https:\/\/rapid\.aaf/, "https://rapid.test.aaf");
+this.href = this.href.replace(/^https:\/\/ide\.aaf/, "https://ide.test.aaf");
 });
 }
 });
