Modified content for HKAF

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AAF Services Dashboard</title>
+    <title>HKAF Services Dashboard</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -42,8 +42,8 @@ span.dropt:hover span {margin: 20px 0 0 170px; background: #ffffff; z-index:6;}
       <div class="container">
         <div class="row">
           <div class="span12">
-            <img src="logo.jpg" alt="AAF Virtual Home" width="102" height="50" />
-            <h1>AAF Services Dashboard</h1>
+            <img src="logo.png" alt="HKAF" width="102" height="50" />
+            <h1>Hong Kong Access Federation - Services Dashboard</h1>
               <h2 class="tfed">Test Federation</h2>
               <h2 class="pfed"></h2>
           </div>
@@ -61,82 +61,104 @@ span.dropt:hover span {margin: 20px 0 0 170px; background: #ffffff; z-index:6;}
 <div class="aaf-icon-group">
 
 <span class="dropt">
-<a href="https://manager.aaf.edu.au/attributevalidator/"><img class="aaf-icon" alt="Attribute Validator" src="img/Attribute-Validator_small.gif"></a>
+<a href="https://manager.hkaf.edu.hk/attributevalidator/"><img class="aaf-icon" alt="Attribute Validator" src="img/Attribute-Validator_small.gif"></a>
 </span>
 
 <span class="dropt">
-<a href="https://manager.aaf.edu.au/federationregistry/"><img class="aaf-icon" alt="Federation Registry" src="img/Federation-Registry_small.gif"></a>
+<a href="https://manager.hkaf.edu.hk/federationregistry/"><img class="aaf-icon" alt="Federation Registry" src="img/Federation-Registry_small.gif"></a>
 </span>
 
+<span class="dropt">
+<a href="https://vh.hkaf.edu.hk/"><img class="aaf-icon" alt="Virtual Home" src="img/Virtual-Home_small.gif"></a>
+</span>
+
+<span class="dropt">
+<a href="https://md.hkaf.edu.hk/"><img class="aaf-icon" alt="Metadata" src="img/Metadata_small.gif"></a>
+</span>
+
+<!-- 
 <span class="dropt">
 <a href="https://status.aaf.edu.au/"><img class="aaf-icon" alt="AAF Status" src="img/Federation-Status_small.gif"></a>
 </span>
+-->
 
+
+</div>
+
+<!--
+<br>
+
+<div class="aaf-icon-group">
+-->
+
+<!--
+<span class="dropt">
+<a href="https://rapid.aaf.edu.au/"><img class="aaf-icon" alt="Rapid Connect" src="img/Rapid-Connect_small.gif"></a>
+</span>
+-->
+
+<!--
+<span class="dropt">
+<a href="https://ide.aaf.edu.au/"><img class="aaf-icon" alt="Identity Enhancement Service" src="img/IdE_icon.png"></a>
+</span>
+-->
+
+<!--
 <span class="dropt">
 <a href="https://assurance.aaf.edu.au/">
 <img class="aaf-icon" alt="Assurance" src="img/Assurance_small.gif"></a>
 </span>
+-->
 
-<span class="dropt">
-<a href="https://rapid.aaf.edu.au/"><img class="aaf-icon" alt="Rapid Connect" src="img/Rapid-Connect_small.gif"></a>
-</span>
-
-</div>
-
-<br>
-
-<div class="aaf-icon-group">
-
-<span class="dropt">
-<a href="https://vho.aaf.edu.au/"><img class="aaf-icon" alt="Virtual Home" src="img/Virtual-Home_small.gif"></a>
-</span>
-
-<span class="dropt">
-<a href="https://ide.aaf.edu.au/"><img class="aaf-icon" alt="Identity Enhancement Service" src="img/IdE_icon.png"></a>
-</span>
-
+<!--
 <img class="aaf-icon" src=img/transparent_small.gif>
 <img class="aaf-icon" src=img/transparent_small.gif>
 <img class="aaf-icon" src=img/transparent_small.gif>
 
 </div>
+-->
 
-<h2 class="aaf-sub-heading">Other Important AAF Services</h2>
+<h2 class="aaf-sub-heading">Other Important HKAF Services</h2>
 
 <div class="aaf-icon-group">
 
+<!--
 <span class="dropt">
-<a href="http://www.aaf.edu.au/"><img class="aaf-icon" alt="AAF Website" src="img/Website_small.gif"></a>
+<a href="http://www.hkaf.edu.hk/"><img class="aaf-icon" alt="HKAF Website" src="img/Website_small.gif"></a>
 </span>
+-->
 
+<!--
 <span class="dropt">
 <a href="http://australianaccessfederation.zendesk.com/forums"><img class="aaf-icon" alt="AAF Knowledge Base" src="img/Knowledge-Base_small.gif"></a>
 </span>
+-->
 
 <span class="dropt">
-<a href="http://www.aaf.edu.au/servicecatalogue/"><img class="aaf-icon" alt="Service Catalogue" src="img/Service-Catalogue_small.gif"></a>
+<a href="http://dashboard.hkaf.edu.hk/servicecatalogue/"><img class="aaf-icon" alt="Service Catalogue" src="img/Service-Catalogue_small.gif"></a>
 </span>
 
 <span class="dropt">
-<a href="http://support.aaf.edu.au/home"><img class="aaf-icon" alt="AAF Help Desk" src="img/Service-Desk_small.gif"></a>
+<a href="mailto:support@hkaf.edu.hk?subject=HKAF+Support+Request"><img class="aaf-icon" alt="HKAF Help Desk" src="img/Service-Desk_small.gif"></a>
 </span>
 
 <span class="dropt">
-<a href="http://wiki.aaf.edu.au/tech-info/"><img class="aaf-icon" alt="AAF Technical Wiki" src="img/Wiki_small.gif"></a>
+<a href="http://hkafaccessfed.github.io/wiki/"><img class="aaf-icon" alt="HKAF Technical Wiki" src="img/Wiki_small.gif"></a>
 </span>
 
 </div>
 
-<h2 class="aaf-sub-heading">Stay Connected with the AAF</h2>
+<h2 class="aaf-sub-heading">Stay Connected with the HKAF</h2>
 
 <div class="aaf-icon-group">
 
+<!--
 <span class="dropt">
-<a href="https://www.facebook.com/ausaccessfed"><img class="aaf-icon" alt="Facebook" src="img/Facebook_small.gif"></a>
+<a href="https://www.facebook.com/hkaccessfed"><img class="aaf-icon" alt="Facebook" src="img/Facebook_small.gif"></a>
 </span>
 
 <span class="dropt">
-<a href="http://twitter.com/ausaccessfed"><img class="aaf-icon" alt="Twitter" src="img/Twitter_small.gif"></a>
+<a href="http://twitter.com/hkaccessfed"><img class="aaf-icon" alt="Twitter" src="img/Twitter_small.gif"></a>
 </span>
 
 <span class="dropt">
@@ -146,9 +168,10 @@ span.dropt:hover span {margin: 20px 0 0 170px; background: #ffffff; z-index:6;}
 <span class="dropt">
 <a href="http://aaf.us4.list-manage2.com/subscribe?u=d3367877a13ec2406280bdf77&id=b50dd0534d"><img class="aaf-icon" alt="General Newsletter" src="img/General-newsletter_small.gif"></a>
 </span>
+-->
 
 <span class="dropt">
-<a href="https://github.com/ausaccessfed/"><img class="aaf-icon" alt="Open Source Projects on Github"src="img/Github_small.gif"></a>
+<a href="https://github.com/hkafaccessfed/"><img class="aaf-icon" alt="Open Source Projects on Github"src="img/Github_small.gif"></a>
 </span>
 
 </div>
@@ -163,7 +186,7 @@ span.dropt:hover span {margin: 20px 0 0 170px; background: #ffffff; z-index:6;}
         <div class="row">
           <div class="span12">
             <p>
-              AAF Services Dashboard
+              HKAF Services Dashboard
             </p>
           </div>
         </div>
@@ -175,7 +198,7 @@ $(function() {
 
 // Test if the servername this page is on is in the prod or test federation.
 var federation = 'prod';
-var regexp = /test\.aaf\.edu\.au/;
+var regexp = /test\.hkaf\.edu\.hk/;
 if (regexp.test(document.location.hostname)) {
   federation = 'test';
 }
@@ -190,13 +213,13 @@ testfederation.show();
 $('a[href]')
 .each(function()
 {
-this.href = this.href.replace(/^https:\/\/assurance\.aaf/, "https://assurance.test.aaf");
-this.href = this.href.replace(/^https:\/\/groups\.aaf/, "https://groups.test.aaf");
-this.href = this.href.replace(/^https:\/\/manager\.aaf/, "https://manager.test.aaf");
-this.href = this.href.replace(/^https:\/\/status\.aaf/, "https://status.test.aaf");
-this.href = this.href.replace(/^https:\/\/vho\.aaf/, "https://vho.test.aaf");
-this.href = this.href.replace(/^https:\/\/rapid\.aaf/, "https://rapid.test.aaf");
-this.href = this.href.replace(/^https:\/\/ide\.aaf/, "https://ide.test.aaf");
+this.href = this.href.replace(/^https:\/\/assurance\.hkaf/, "https://assurance.test.hkaf");
+this.href = this.href.replace(/^https:\/\/groups\.hkaf/, "https://groups.test.hkaf");
+this.href = this.href.replace(/^https:\/\/manager\.hkaf/, "https://manager.test.hkaf");
+this.href = this.href.replace(/^https:\/\/status\.hkaf/, "https://status.test.hkaf");
+this.href = this.href.replace(/^https:\/\/vh\.hkaf/, "https://vho.test.hkaf");
+this.href = this.href.replace(/^https:\/\/rapid\.hkaf/, "https://rapid.test.hkaf");
+this.href = this.href.replace(/^https:\/\/ide\.hkaf/, "https://ide.test.hkaf");
 });
 }
 });
@@ -208,7 +231,7 @@ this.href = this.href.replace(/^https:\/\/ide\.aaf/, "https://ide.test.aaf");
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-10905861-2', 'aaf.edu.au');
+  ga('create', 'UA-10905861-2', 'hkaf.edu.hk');
   ga('send', 'pageview');
 
 </script>
