Removed AAF logo

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ span.dropt:hover span {margin: 20px 0 0 170px; background: #ffffff; z-index:6;}
 </span>
 
 <span class="dropt">
-<a href="https://md.hkaf.edu.hk/"><img class="aaf-icon" alt="Metadata" src="img/Metadata_small.gif"></a>
+<a href="https://md.hkaf.edu.hk/"><img class="aaf-icon" alt="Metadata" src="img/metadata_icon.gif"></a>
 </span>
 
 <!-- 
