Add Installer option

--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@ span.dropt:hover span {margin: 20px 0 0 170px; background: #ffffff; z-index:6;}
 <a href="https://md.hkaf.edu.hk/"><img class="aaf-icon" alt="Metadata" src="img/metadata_icon.gif"></a>
 </span>
 
+<span class="dropt">
+<a href="http://hkafaccessfed.github.io/shibboleth-idp-installer"><img class="aaf-icon" alt="IdP Installer" src="img/idp-installer_small.gif"></a>
+</span>
+
 <!-- 
 <span class="dropt">
 <a href="https://status.aaf.edu.au/"><img class="aaf-icon" alt="AAF Status" src="img/Federation-Status_small.gif"></a>
@@ -143,7 +147,7 @@ span.dropt:hover span {margin: 20px 0 0 170px; background: #ffffff; z-index:6;}
 </span>
 
 <span class="dropt">
-<a href="http://hkafaccessfed.github.io/wiki/"><img class="aaf-icon" alt="HKAF Technical Wiki" src="img/Wiki_small.gif"></a>
+<a href="http://hkafaccessfed.github.io/info/"><img class="aaf-icon" alt="HKAF Technical Wiki" src="img/Wiki_small.gif"></a>
 </span>
 
 </div>
