Fixed broken image and link

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ span.dropt:hover span {margin: 20px 0 0 170px; background: #ffffff; z-index:6;}
 </span>
 
 <span class="dropt">
-<a href="http://hkafaccessfed.github.io/shibboleth-idp-installer"><img class="aaf-icon" alt="IdP Installer" src="img/idp-installer_small.gif"></a>
+<a href="http://hkafaccessfed.github.io/shibboleth-idp-installer"><img class="aaf-icon" alt="IdP Installer" src="img/idp_installer_small.gif"></a>
 </span>
 
 <!-- 
